 - API: Changed initialization of ToolbarDockStation such that it is more easy for subclasses to add additional Components
 - Bugfix: When loading a CStation from a perspective, and exception was thrown because of the unique identifier of the station not beeing an identifier of a SingleCDockable
 - API: Added some methods (save, load) to CControl to more easily handle layouts
 
[v1.1.2p8d]
 - Bugfix: When clicking on a Dockable with no focusable Components, the framework will now attempt to focus one of the children (at least ensuring focus goes away from the old Component)
 - API: It is now possible to "close" a decorated externalized Dockable in Common (the CDockable is normalized). The behavior can be customized with the property key ScreenDockStation.WINDOW_CLOSING_STRATEGY.

[v1.1.2p8e]
 - Bugfix: SeparatingMenuPiece did call "remove" one time too often if both top and bottom separator were enabled and the item count did fall to 0
 
[v1.1.2p8f]
 - Bugfix: could not use toolbars because of a NullPointerException
 - Bugfix: updating a title when removing a Dockable from a StackDockStation could cause an exception, the listener that observers the title-event is now removed earlier.
 
[v1.1.2p9]
 - API: added the DockComponentManager which allows clients to directly configure nearly all Components that are created the framework

[v1.1.2p9a]
 - Bugfix: If a SplitDockStation was not at coordinates 0/0, then the SideSnapDropLayer was actually at the wrong position
 - Bugfix: There could be a ConcurrentModificationException if ModeArea were created or removed during a drag and drop operation

[v1.1.2p9b]
 - Bugfix: It is no longer possible to merge two stacks of floating CDockables that have a different working-area
 
[v1.1.2p9c]
 - API: Added "setEnabled" to RootMenuPiece allowing clients to disable the menu
 
[v1.1.2p9d]
 ! Bugfix: CGridPerspective did not allow its subclass CWorkingPerspective to configure the delegate early enough   